Agreagado de estructura de menú

--- a/Solution-uai-vet/vet.website.test/Views/Shared/_template.cshtml
+++ b/Solution-uai-vet/vet.website.test/Views/Shared/_template.cshtml
@@ -11,6 +11,16 @@
 </head>
 <body>
     <div>
+        <header>
+            <nav>
+                    <ul>
+                        <li><a href="acercaDe.html">Acerca de</a></li>
+                        <li><a href="turnos.html">Gestionar Turno</a></li>
+                        <li><a href="consultas.html">Consultas</a></li>
+                        <li><a href="contacto.html">Contacto</a></li>
+                    </ul>
+            </nav>
+        </header>
         <h1>pagina principal</h1>
     @RenderBody()
         <footer>
